--- a/src/App.css
+++ b/src/App.css
@@ -5,10 +5,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #e7e7e7;
+    background: #E3E3E3FF;
+    background: linear-gradient(0deg, rgba(227, 227, 227, 1) 0%, rgba(255, 255, 255, 1) 100%);
 }
 
 .wrapper {
+    z-index: 2;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -65,4 +67,38 @@
 }
 
 
+.bubble-container {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    z-index: 1;
+}
+
+.bubble {
+    position: absolute;
+    bottom: -200px;
+    width: 20px;
+    height: 20px;
+    background-color: rgba(180, 180, 180, 0.4);
+    border-radius: 50%;
+    animation: rise 8s infinite ease-in;
+}
+
+
+@keyframes rise {
+    0% {
+        transform: translateY(0) scale(1);
+        opacity: 0.4;
+    }
+    50% {
+        opacity: 0.7;
+    }
+    100% {
+        transform: translateY(-120vh) scale(0.5);
+        opacity: 0;
+    }
+}
 
